# code-pr-assist

./: .bandit  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  Makefile  Makefile.common  README.md  env.example  makefile  mypy.ini  post-clone-setup.md  pyproject.toml  pytest.ini  requirements.txt  setup-dev.sh  setup.sh
.devcontainer/: Dockerfile  README.md  devcontainer.env  devcontainer.json
.github/: auto-merge-setup.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: security-scan.sh  setup-labels.sh
.github/workflows/: auto-merge.yml  ci.yml  codeql.yml
database-agent/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  requirements.txt
database-agent/.github/: dependabot.yml
database-agent/src/database_agent/: __init__.py  database_agent.py  exceptions.py  github_client.py  main.py  pr_processor.py  tracing.py  vector_store.py
database-agent/src/tests/: conftest.py  test_database_agent.py  test_github_client.py  test_github_client_advanced.py  test_pr_processor.py  test_pr_processor_advanced.py  test_vector_store.py  test_vector_store_advanced.py
docs/: example_implementation.py  github_pr_qdrant_integration.md  requirements.txt
github-agent/: .coveragerc  .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  requirements.txt
github-agent/.github/: dependabot.yml
github-agent/src/github_agent/: __init__.py  config.py  embedding_agent.py  exceptions.py  github_agent.py  github_utils.py  llm_agent.py  llm_utils.py  main.py  qdrant_utils.py  tracing.py
github-agent/src/github_agent/agents/: embedding_agent.py  github_agent.py  llm_agent.py
github-agent/src/tests/: __init__.py  test_embedding_agent.py  test_github_agent.py  test_github_utils.py  test_llm_agent.py  test_llm_utils.py  test_main.py  test_models.py  test_qdrant_utils.py
scripts/: security-scan.sh
src/agent/: config.py  github_utils.py  llm_utils.py  main.py  models.py  qdrant_utils.py
tests/: test_github_utils.py  test_llm_utils.py  test_models.py  test_qdrant_utils.py
