[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github_agent"
version = "0.1.0"
authors = [
    { name = "Ravi Chillerega", email = "chilleregeravi@gmail.com" },
]
description = "A GitHub agent for processing pull requests"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "PyGithub",
    "openai",
    "qdrant-client",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.26",  # For FastAPI TestClient
    "black>=24.1",  # Code formatting
    "isort>=5.13",  # Import sorting
    "flake8>=7.0",  # Linting
    "mypy>=1.8",    # Type checking
]

[tool.pytest.ini_options]
addopts = "-v --cov=src/github_agent --cov-report=term-missing --cov-report=xml:coverage.xml"
testpaths = ["src/tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src/github_agent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 80

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["github_agent"]